fix: long model names get truncated in the svelecte multiple selection (#783)

--- a/frontend/src/theme/_smui-theme.scss
+++ b/frontend/src/theme/_smui-theme.scss
@@ -119,6 +119,7 @@ body {
 
 .has-multiSelection {
 	outline: none !important;
+	overflow: auto !important;
 }
 
 .autocomplete {
